<resources>
    <string name="app_name">Arduino Testing App</string>
    <string name="TextBoxToSend">Type text to send</string>
    <string name="SendTextButton">Send Text</string>
    <string name="ClearLogBtn">Clear Log</string>
    <string name="AddBtnTextBox">Function of the new</string>
    <string name="AddBtn">Add Button</string>
    <string name="BluetoothBtn">Connect to Arduino(Bluetooth)</string>
    <string name="SetZeroPos">SetZeroPos</string>
    <string name="SendSensorData">SendSensorData</string>
</resources>
